# Real_Time_ML_System

./: .gitignore  README.md  quix.yaml
.github/workflow/: test.yml
.github/workflows/: test.yml  (+6 more)
docker-compose/: Makefile  backfill_pipeline.yml  elastic_search_and_kibana.yml  feature_pipeline.yml
services/price_predictor/: Dockerfile  Makefile  app.yaml  comet.credentials .env.sample  hopsworks.credentials.env.sample  prediction.env  price_predictor_ETH_USD_60s_5steps.joblib  pyproject.toml  training.env
services/price_predictor/src/: api.py  config.py  feature_engineering.py  hopsworks_api.py  logger.py  model_registry.py  ohlc_data_reader copy.py  ohlc_data_reader.py  prediction.py  preprocessing.py  price_predictor.py  training.py  utils.py
services/price_predictor/src/models/: current_price_baseline.py  moving_average_baseline.py  xgboost_model.py
services/price_predictor/tests/: test_utils.py
services/topic_to_feature_store/: Dockerfile  Makefile  app.yaml  historical.prod.env  live.dev.env  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  logger.py  main.py  utils.py
services/trade_producer/: Makefile  app.yaml  dev.env  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_rest_api_2.py  kraken_websocket_api.py  logger.py  main.py
services/trade_producer/src/trade_data_source/: __init__.py  base.py  kraken_rest_api.py  kraken_websocket_api.py  trade.py
services/trade_to_ohlc/: Dockerfile  Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  ohlcv.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py  ohlcv_config.py
services/trade_to_ohlc/tests/: test_update_ohlc_candle.py
