[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ameyshinde28 <aammeeyy28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
quixstreams = "^2.11.1"
loguru = "^0.7.2"
pydantic = "^2.9.2"
hopsworks = {extras = ["python"], version = "^4.1.0"}
kafka-python = "^2.0.2"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
