[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ameyshinde28 <aammeeyy28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
quixstreams = "^2.11.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
